[tool.poetry]
name = "astropy_extension"
version = "0.1.0"
description = ""
authors = ["y-marui"]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.23.3"
astropy = "^5.1"
matplotlib = "^3.6.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.16.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
